# pi_agent_rust

./: .gitignore  Cargo.toml  MASTER_WORKTREE_EXECUTION_MATRIX.md  README.md  WORKTREE_PLAN_00_KERNEL_SURFACES_AND_FINAL_CUTOVER.md
.beads/: config.yaml
.beads/export-state/: 0cab7a1589729843.json  232f8228e1d327bd.json  27c9c73cbe50e2cd.json  36c9978e82bedac9.json  718952d9202406ec.json  8ebd070cf61da6d2.json  b7bde280a0a56d51.json  d35f94e32b1e9b8b.json  e31c89efd989330b.json  f23238f4383d2a2d.json
.cargo/: config.toml
.code-state/cache/: import-index-v5-git_d140c902_5d89206a044e2f746556ba77f5ebc39d610ca26254131dac28dfb4949e8a8172.txt  import-index-v5-git_e0d8963c_ec27a4678d84fe4fe78102a9e39e889e15988f55a05bd94371e51f3ec122ff13.txt  public-surfaces.tsv
.code-state/cache/sections/: HAZARDS_AUTO-v5-000cd268ee74b06e00a2ca7e0eb057ee26701475e4b4b90f95791a5d2551a645.txt  KEY_FILES-v5-2396cc901c81f0cff48dc56b4b0fca8a2dfa4a163e6a0f04fb811abb31eb7b78.txt  KEY_FILES-v5-68bc9131051e87015b0f0a3ba2c59d0722149cb1c6138995529463ce0874a371.txt
.factory/: init.sh  services.yaml
.factory/skills/cross-surface-integration-tester/: SKILL.md
.factory/skills/extension-runtime-cutover/: SKILL.md
.factory/skills/runtime-contract-architect/: SKILL.md
.factory/skills/runtime-plane-engineer/: SKILL.md
.github/workflows/: ci.yml  mutation.yml
benches/: context_processors.rs
docs/: extension-artifact-provenance.json  extension-conformance-test-plan.json  extension-inclusion-list.json  extension-master-catalog.json  skills.md
runtime-control-plane-unification/: ARCHITECTURE_REVIEW.md  README.md  TASKS.md  VERIFICATION_CONSOLIDATION.md  WORKER_ROLE_ELEVATION.md
scripts/: rustc-nightly.sh
scripts/perf/: orchestrate.sh
src/: agent.rs  app.rs  cli.rs  code_index.rs  compaction.rs  compaction_worker.rs  config.rs  doctor.rs  error.rs  error_hints.rs  events.rs  extension_dispatcher.rs  extension_events.rs  extensions.rs  extensions_js.rs  hostcall_amac.rs  hostcall_queue.rs  interactive.rs  lib.rs  main.rs  model.rs  models.rs  package_manager.rs  prompt_assembly.rs  prompt_plan.rs  prompt_usage.rs  repo_policy.rs  resources.rs  retrieval.rs  rpc.rs  sdk.rs  session.rs  session_index.rs  session_sqlite.rs  session_store_v2.rs  tools.rs
src/auth/: audit.rs  cache.rs  cache_concurrency_tests.rs  callbacks.rs  keyring.rs  mod.rs  refresh_worker.rs  secret_resolver.rs
src/config/: schema.rs
src/context/: cache_control.rs  compact_manifest.rs  dedup.rs  mod.rs  processors.rs  summary.rs  thinning.rs  threshold.rs  tool_output_pruner.rs  turns.rs  visibility.rs
src/contracts/: adapter.rs  bootstrap.rs  boundary.rs  dto.rs  engine.rs  kernel.rs  mod.rs  plane.rs  runtime.rs
src/interactive/: agent.rs  commands.rs  ext_session.rs  perf.rs  state.rs  tests.rs  tree.rs  tree_ui.rs  view.rs
src/lsp/: client.rs  mod.rs  registry.rs
src/orchestration/: coordinator.rs  flock.rs  mod.rs  run.rs  tests.rs
src/policy/: approval.rs  bash_ast.rs  blocklist.rs  constraint.rs  edit_validation.rs  exec_policy.rs  mod.rs
src/providers/: anthropic.rs  gemini.rs  openai.rs  openai_responses.rs  vertex.rs
src/reliability/: context_budget.rs  dag.rs  edge.rs  lease.rs  mod.rs  recovery.rs  state.rs  state_machine.rs  task.rs  test_quality.rs  verifier.rs
src/rpc/: test_support.rs  tests.rs
src/runtime/: controller.rs  dispatch.rs  events.rs  execution.rs  mod.rs  model_routing.rs  policy.rs  role_prompt.rs  scheduler.rs  service.rs  state_machine.rs  store.rs  types.rs  verification.rs
src/sandbox/: linux.rs  macos.rs  mod.rs  network.rs  verifier.rs  windows.rs
src/services/: mod.rs  reliability_service.rs  run_service.rs  session_event_store.rs  workflow_service.rs
src/skills/: authoring.rs  improvement.rs  installer.rs  loader.rs  mod.rs  resolver.rs  schema.rs
src/state/: discovery.rs  events.rs  gates.rs  handoff.rs  ledger.rs  mod.rs
src/surface/: auth_setup.rs  cli_commands.rs  extension_policy.rs  extension_runtime.rs  mod.rs  routing.rs  rpc_protocol.rs  rpc_runtime_commands.rs  rpc_server.rs  rpc_service_commands.rs  rpc_session_commands.rs  rpc_support.rs  rpc_transport_commands.rs  rpc_types.rs  startup.rs
src/task_graph/: dag.rs  mod.rs  recovery.rs
src/tools/: code_context.rs  html_extract.rs  lsp.rs  retry.rs  web_cache.rs  webfetch.rs  websearch.rs
src/verification/: evidence.rs  mod.rs  test_analyzer.rs  test_guard.rs  test_quality.rs  tokens.rs
tests/: agent_tools_coverage.rs  auth_cache_security.rs  auth_oauth_refresh_vcr.rs  auth_v2.rs  autosave_timing.rs  bench_schema.rs  branch_edge_failure_coverage.rs  capability_policy_model.rs  capability_policy_scoped.rs  ci_full_suite_gate.rs  command_mediation_bypass.rs  compaction.rs  compaction_bug.rs  config_edge_cases.rs  conformance.rs  conformance_regression_gate.rs  conformance_report.rs  context_integration.rs  cross_surface_parity.rs  e2e_cli.rs  e2e_provider_scenarios.rs  e2e_rpc.rs  e2e_security_scenarios.rs  e2e_tools.rs  e2e_ts_extension_loading.rs  e2e_tui.rs  error_handling.rs  exec_mediation_integration.rs  ext_boundary_fuzz.rs  ext_conformance_generated.rs  ext_inclusion_list.rs  ext_random_trials.rs  extension_validation.rs  extensions_auth_error_coverage.rs  extensions_stress.rs  hostcall_queue_loom.rs  incident_evidence_bundle.rs  keyring_fallback.rs  model_serialization.rs  oauth_redaction.rs  (+28 more)
tests/common/: tmux.rs
tests/conformance/: fixture_runner.rs  mod.rs
tests/full_suite_gate/: artifact_retention_report.json  certification_dossier.json  certification_dossier.md  certification_events.jsonl  certification_report.md  certification_verdict.json  extension_remediation_backlog.json  extension_remediation_backlog.md  full_suite_events.jsonl  full_suite_report.md  full_suite_verdict.json  perf3x_bead_coverage_audit.json  practical_finish_checkpoint.json  preflight_verdict.json  reliability_hard_mode_gate.json  replay_bundle.json  sec_conformance_verdict.json  waiver_audit.json
tests/security_compat/: security_compat_dashboard.json  security_compat_events.jsonl
(+55 files in other folders)
